<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.task.noteapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_new_note"
            app:destination="@id/nav_new_note"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_home_to_nav_update_note"
            app:destination="@id/nav_update_note"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>


    <fragment
        android:id="@+id/nav_new_note"
        android:name="com.task.noteapp.ui.newnote.NewNoteFragment"
        android:label="@string/menu_new_note"
        tools:layout="@layout/fragment_new_note">
        <action
            android:id="@+id/action_nav_new_note_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_right"
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_home"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_update_note"
        android:name="com.task.noteapp.ui.updatenote.UpdateNoteFragment"
        android:label="@string/menu_update_note"
        tools:layout="@layout/fragment_update_note">
        <action
            android:id="@+id/action_nav_update_note_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpToInclusive="true"
            app:popUpTo="@id/nav_home"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <argument
            android:name="note"
            app:argType="com.task.noteapp.model.Note"
            app:nullable="true" />
    </fragment>
</navigation>